Fix header styling vertical alignment

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -40,13 +40,14 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        // padding-right: 1rem;
+        align-items: center;
     }
 
     &__add-friends-icon {
         width: 40px;
         height: 40px;
         margin-right: 1.5rem;
+        margin-bottom: -8px;
         transition: 0.25s;
         cursor: pointer;
 
